--- a/example_networks/write-up.tex
+++ b/example_networks/write-up.tex
@@ -21,51 +21,51 @@ The abstract text goes here.
 		\item Rheb activates AMPK and reduces p27 in TSC2 null  cells which in turn reduces cdk2 \cite{lacher2010rheb}
 		\item Rheb is constitutively active in TSC2 knockout cells \cite{lacher2010rheb}
 		\item In TSC2 null cells, down regulating Rheb down regulated mTORC1 and s6k
-		\item TSC2 is a GAP for Rheb \cite{Inoki2003}
+		\item TSC2 is a GAP for Rheb~\cite{Inoki2003}
 		\item The more TSC2 in the system the more Rheb that is hydrolysed \cite{Inoki2003}
 		\item Rheb-GTP is an activator of mTORC1, measured by an increase in S6K and 4EBP phos
 		\item The more RhebGTP present the more mTORC1 activation and S6K/4EBP phos \cite{Inoki2003}
 	\end{itemize}
-
-	\subsection{\cite{nobukini2005amino}}
-	\begin{itemize}
-		\item Figure 1B
-		\item S6K response to AA with mild phos but not to insulin. When combined, S6K has much larger phos response.
-		\item Akt S473 is phos basally with no change with addition of AA. Insulin causes massive phos of Akt but both AA and insulin together produce a weaker signal.
-		\item TSC2 is not phos by AA stim but is by insulin or both. Looks like AA provides no potentiation to the insulin signal.
-		\item
-	\end{itemize}
-
-
-	\cite{Inoki2006}
-
-	\section{Papers left to read}
-	\begin{itemize}
-		\item Inoki2003 ampk phos tsc2
-	\end{itemize}
-
-
-\begin{itemize}
-	\item insulin causes phos of s6k
-	\item
-\end{itemize}
-
-
-\subsection{Ideas for language extension}
-Define conditions within the language?
-Keywords and language useage for end user:
-\begin{itemize}
-	\item Oscillations x: Look for oscillations in x
-	\item transient increasing x: Look for a transient increasing curve
-	\item x@t=5 > x@t=10
-	\item max x@t=(0, 100) > 50
-	\item
-	\item define condition name {Insulin: 1, AA: 0}
-	\item define condition combinations name {Insulin: 1, AA: 0}
-	\item Then to reference the condition:
-	\item all x[name]@t=(0,100) > max x[other_name]@t=(0, 100)
-\end{itemize}
-
+%
+%	\subsection{x}
+%%\cite{nobukini2005amino}}
+%	\begin{itemize}
+%		\item Figure 1B
+%		\item S6K response to AA with mild phos but not to insulin. When combined, S6K has much larger phos response.
+%		\item Akt S473 is phos basally with no change with addition of AA. Insulin causes massive phos of Akt but both AA and insulin together produce a weaker signal.
+%		\item TSC2 is not phos by AA stim but is by insulin or both. Looks like AA provides no potentiation to the insulin signal.
+%		\item
+%	\end{itemize}
+%
+%
+%	\cite{Inoki2006}
+%
+%	\section{Papers left to read}
+%	\begin{itemize}
+%		\item Inoki2003 ampk phos tsc2
+%	\end{itemize}
+%
+%
+%\begin{itemize}
+%	\item insulin causes phos of s6k
+%	\item
+%\end{itemize}
+%
+%
+%\subsection{Ideas for language extension}
+%Define conditions within the language?
+%Keywords and language useage for end user:
+%\begin{itemize}
+%	\item Oscillations x: Look for oscillations in x
+%	\item transient increasing x: Look for a transient increasing curve
+%	\item x@t=5 > x@t=10
+%	\item max x@t=(0, 100) > 50
+%	\item
+%	\item define condition name {Insulin: 1, AA: 0}
+%	\item define condition combinations name {Insulin: 1, AA: 0}
+%	\item Then to reference the condition:
+%	\item all x[name]@t=(0,100) > max x[other_name]@t=(0, 100)
+%\end{itemize}
 
 
 
