update shiny add. more lit review

--- a/example_networks/sources.bib
+++ b/example_networks/sources.bib
@@ -164,6 +164,111 @@
   publisher = {Federation of American Societies for Experimental Biology},
 }
 
+@Article{tremblay2001amino,
+  author    = {Tremblay, Fr{\'e}d{\'e}ric and Marette, Andr{\'e}},
+  title     = {Amino acid and insulin signaling via the mTOR/p70 S6 kinase pathway A negative feedback mechanism leading to insulin resistance in skeletal muscle cells},
+  journal   = {Journal of Biological Chemistry},
+  year      = {2001},
+  volume    = {276},
+  number    = {41},
+  pages     = {38052--38060},
+  file      = {:paper2.pdf:PDF},
+  publisher = {ASBMB},
+}
+
+@Article{manning2003rheb,
+  author    = {Manning, Brendan D and Cantley, Lewis C},
+  title     = {Rheb fills a GAP between TSC and TOR},
+  journal   = {Trends in biochemical sciences},
+  year      = {2003},
+  volume    = {28},
+  number    = {11},
+  pages     = {573--576},
+  file      = {:paper3.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{demetriades2014regulation,
+  author    = {Demetriades, Constantinos and Doumpas, Nikolaos and Teleman, Aurelio A},
+  title     = {Regulation of TORC1 in response to amino acid starvation via lysosomal recruitment of TSC2},
+  journal   = {Cell},
+  year      = {2014},
+  volume    = {156},
+  number    = {4},
+  pages     = {786--799},
+  file      = {:paper4.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{egan2011autophagy,
+  author    = {Egan, Dan and Kim, Joungmok and Shaw, Reuben J and Guan, Kun-Liang},
+  title     = {The autophagy initiating kinase ULK1 is regulated via opposing phosphorylation by AMPK and mTOR},
+  journal   = {Autophagy},
+  year      = {2011},
+  volume    = {7},
+  number    = {6},
+  pages     = {643--644},
+  file      = {:egan2011autophagy - The autophagy initiating kinase ULK1 is regulated via opposing phosphorylation by AMPK and mTOR.15123?needAccess=true:},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{jia2019galectins,
+  author    = {Jia, Jingyue and Abudu, Yakubu Princely and Claude-Taupin, Aurore and Gu, Yuexi and Kumar, Suresh and Choi, Seong Won and Peters, Ryan and Mudd, Michal H and Allers, Lee and Salemi, Michelle and others},
+  title     = {Galectins control MTOR and AMPK in response to lysosomal damage to induce autophagy},
+  journal   = {Autophagy},
+  year      = {2019},
+  volume    = {15},
+  number    = {1},
+  pages     = {169--171},
+  file      = {:paper5.pdf:PDF},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{xu2012cross,
+  author    = {Xu, Jia and Ji, Jian and Yan, Xiang-Hua},
+  title     = {Cross-talk between AMPK and mTOR in regulating energy balance},
+  journal   = {Critical reviews in food science and nutrition},
+  year      = {2012},
+  volume    = {52},
+  number    = {5},
+  pages     = {373--381},
+  file      = {:Cross Talk between AMPK and mTOR in Regulating Energy Balance.pdf:PDF},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{hahn2005akt,
+  author    = {Hahn-Windgassen, Annett and Nogueira, Veronique and Chen, Chia-Chen and Skeen, Jennifer E and Sonenberg, Nahum and Hay, Nissim},
+  title     = {Akt activates the mammalian target of rapamycin by regulating cellular ATP level and AMPK activity},
+  journal   = {Journal of Biological Chemistry},
+  year      = {2005},
+  volume    = {280},
+  number    = {37},
+  pages     = {32081--32089},
+  file      = {:hahn2005akt - Akt activates the mammalian target of rapamycin by regulating cellular ATP level and AMPK activity.pdf:PDF},
+  publisher = {ASBMB},
+}
+
+@Article{jhanwar2019diverse,
+  author    = {Jhanwar-Uniya, Meena and Wainwright, John V and Mohan, Avinash L and Tobias, Michael E and Murali, Raj and Gandhi, Chirag D and Schmidt, Meic H},
+  title     = {Diverse signaling mechanisms of mTOR complexes: mTORC1 and mTORC2 in forming a formidable relationship},
+  journal   = {Advances in biological regulation},
+  year      = {2019},
+  file      = {:paper6.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{shackelford2009lkb1,
+  author    = {Shackelford, David B and Shaw, Reuben J},
+  title     = {The LKB1--AMPK pathway: metabolism and growth control in tumour suppression},
+  journal   = {Nature Reviews Cancer},
+  year      = {2009},
+  volume    = {9},
+  number    = {8},
+  pages     = {563},
+  file      = {:paper7.pdf:PDF},
+  publisher = {Nature Publishing Group},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: fileDirectory:sources;}
