pulled develop to home!

--- a/example_networks/sources.bib
+++ b/example_networks/sources.bib
@@ -68,6 +68,207 @@
   publisher = {Elsevier},
 }
 
+@Article{vander2007insulin,
+  author    = {Vander Haar, Emilie and Lee, Seong-il and Bandhakavi, Sricharan and Griffin, Timothy J and Kim, Do-Hyung},
+  title     = {Insulin signalling to mTOR mediated by the Akt/PKB substrate PRAS40},
+  journal   = {Nature cell biology},
+  year      = {2007},
+  volume    = {9},
+  number    = {3},
+  pages     = {316},
+  file      = {:vander2007insulin - Insulin signalling to mTOR mediated by the Akt_PKB substrate PRAS40.pdf:PDF},
+  publisher = {Nature Publishing Group},
+}
+
+@Article{hemmings2012pi3k,
+  author    = {Hemmings, Brian A and Restuccia, David F},
+  title     = {Pi3k-pkb/akt pathway},
+  journal   = {Cold Spring Harbor perspectives in biology},
+  year      = {2012},
+  volume    = {4},
+  number    = {9},
+  pages     = {a011189},
+  doi       = {10.1101/cshperspect.a026609},
+  file      = {:hemmings.pdf:PDF},
+  owner     = {ncw135},
+  publisher = {Cold Spring Harbor Lab},
+}
+
+@Article{sarbassov2005phosphorylation,
+  author    = {Sarbassov, Dos D and Guertin, David A and Ali, Siraj M and Sabatini, David M},
+  title     = {Phosphorylation and regulation of Akt/PKB by the rictor-mTOR complex},
+  journal   = {Science},
+  year      = {2005},
+  volume    = {307},
+  number    = {5712},
+  pages     = {1098--1101},
+  file      = {:sarbassov2005phosphorylation - Phosphorylation and regulation of Akt_PKB by the rictor-mTOR complex.pdf:PDF},
+  publisher = {American Association for the Advancement of Science},
+}
+
+@Article{song2005activation,
+  author    = {Song, Gang and Ouyang, Gaoliang and Bao, Shideng},
+  title     = {The activation of Akt/PKB signaling pathway and cell survival},
+  journal   = {Journal of cellular and molecular medicine},
+  year      = {2005},
+  volume    = {9},
+  number    = {1},
+  pages     = {59--71},
+  publisher = {Wiley Online Library},
+}
+
+@Article{bar2014regulation,
+  author    = {Bar-Peled, Liron and Sabatini, David M},
+  title     = {Regulation of mTORC1 by amino acids},
+  journal   = {Trends in cell biology},
+  year      = {2014},
+  volume    = {24},
+  number    = {7},
+  pages     = {400--406},
+  publisher = {Elsevier},
+}
+
+@Article{goberdhan2016amino,
+  author    = {Goberdhan, Deborah CI and Wilson, Clive and Harris, Adrian L},
+  title     = {Amino acid sensing by mTORC1: intracellular transporters mark the spot},
+  journal   = {Cell metabolism},
+  year      = {2016},
+  volume    = {23},
+  number    = {4},
+  pages     = {580--589},
+  file      = {:AAsensingmTOR.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{sancak2010ragulator,
+  author    = {Sancak, Yasemin and Bar-Peled, Liron and Zoncu, Roberto and Markhard, Andrew L and Nada, Shigeyuki and Sabatini, David M},
+  title     = {Ragulator-Rag complex targets mTORC1 to the lysosomal surface and is necessary for its activation by amino acids},
+  journal   = {Cell},
+  year      = {2010},
+  volume    = {141},
+  number    = {2},
+  pages     = {290--303},
+  file      = {:Sancak.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{hinault2004amino,
+  author    = {Hinault, Charlotte and Mothe-Satney, Isabelle and Gautier, Nadine and Lawrence Jr, John C and Van Obberghen, Emmanuel},
+  title     = {Amino acids and leucine allow insulin activation of the PKB/mTOR pathway in normal adipocytes treated with wortmannin and in adipocytes from db/db mice},
+  journal   = {The FASEB journal},
+  year      = {2004},
+  volume    = {18},
+  number    = {15},
+  pages     = {1894--1896},
+  file      = {:paper1.pdf:PDF},
+  publisher = {Federation of American Societies for Experimental Biology},
+}
+
+@Article{tremblay2001amino,
+  author    = {Tremblay, Fr{\'e}d{\'e}ric and Marette, Andr{\'e}},
+  title     = {Amino acid and insulin signaling via the mTOR/p70 S6 kinase pathway A negative feedback mechanism leading to insulin resistance in skeletal muscle cells},
+  journal   = {Journal of Biological Chemistry},
+  year      = {2001},
+  volume    = {276},
+  number    = {41},
+  pages     = {38052--38060},
+  file      = {:paper2.pdf:PDF},
+  publisher = {ASBMB},
+}
+
+@Article{manning2003rheb,
+  author    = {Manning, Brendan D and Cantley, Lewis C},
+  title     = {Rheb fills a GAP between TSC and TOR},
+  journal   = {Trends in biochemical sciences},
+  year      = {2003},
+  volume    = {28},
+  number    = {11},
+  pages     = {573--576},
+  file      = {:paper3.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{demetriades2014regulation,
+  author    = {Demetriades, Constantinos and Doumpas, Nikolaos and Teleman, Aurelio A},
+  title     = {Regulation of TORC1 in response to amino acid starvation via lysosomal recruitment of TSC2},
+  journal   = {Cell},
+  year      = {2014},
+  volume    = {156},
+  number    = {4},
+  pages     = {786--799},
+  file      = {:paper4.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{egan2011autophagy,
+  author    = {Egan, Dan and Kim, Joungmok and Shaw, Reuben J and Guan, Kun-Liang},
+  title     = {The autophagy initiating kinase ULK1 is regulated via opposing phosphorylation by AMPK and mTOR},
+  journal   = {Autophagy},
+  year      = {2011},
+  volume    = {7},
+  number    = {6},
+  pages     = {643--644},
+  file      = {:egan2011autophagy - The autophagy initiating kinase ULK1 is regulated via opposing phosphorylation by AMPK and mTOR.15123?needAccess=true:},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{jia2019galectins,
+  author    = {Jia, Jingyue and Abudu, Yakubu Princely and Claude-Taupin, Aurore and Gu, Yuexi and Kumar, Suresh and Choi, Seong Won and Peters, Ryan and Mudd, Michal H and Allers, Lee and Salemi, Michelle and others},
+  title     = {Galectins control MTOR and AMPK in response to lysosomal damage to induce autophagy},
+  journal   = {Autophagy},
+  year      = {2019},
+  volume    = {15},
+  number    = {1},
+  pages     = {169--171},
+  file      = {:paper5.pdf:PDF},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{xu2012cross,
+  author    = {Xu, Jia and Ji, Jian and Yan, Xiang-Hua},
+  title     = {Cross-talk between AMPK and mTOR in regulating energy balance},
+  journal   = {Critical reviews in food science and nutrition},
+  year      = {2012},
+  volume    = {52},
+  number    = {5},
+  pages     = {373--381},
+  file      = {:Cross Talk between AMPK and mTOR in Regulating Energy Balance.pdf:PDF},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{hahn2005akt,
+  author    = {Hahn-Windgassen, Annett and Nogueira, Veronique and Chen, Chia-Chen and Skeen, Jennifer E and Sonenberg, Nahum and Hay, Nissim},
+  title     = {Akt activates the mammalian target of rapamycin by regulating cellular ATP level and AMPK activity},
+  journal   = {Journal of Biological Chemistry},
+  year      = {2005},
+  volume    = {280},
+  number    = {37},
+  pages     = {32081--32089},
+  file      = {:hahn2005akt - Akt activates the mammalian target of rapamycin by regulating cellular ATP level and AMPK activity.pdf:PDF},
+  publisher = {ASBMB},
+}
+
+@Article{jhanwar2019diverse,
+  author    = {Jhanwar-Uniya, Meena and Wainwright, John V and Mohan, Avinash L and Tobias, Michael E and Murali, Raj and Gandhi, Chirag D and Schmidt, Meic H},
+  title     = {Diverse signaling mechanisms of mTOR complexes: mTORC1 and mTORC2 in forming a formidable relationship},
+  journal   = {Advances in biological regulation},
+  year      = {2019},
+  file      = {:paper6.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{shackelford2009lkb1,
+  author    = {Shackelford, David B and Shaw, Reuben J},
+  title     = {The LKB1--AMPK pathway: metabolism and growth control in tumour suppression},
+  journal   = {Nature Reviews Cancer},
+  year      = {2009},
+  volume    = {9},
+  number    = {8},
+  pages     = {563},
+  file      = {:paper7.pdf:PDF},
+  publisher = {Nature Publishing Group},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: fileDirectory:sources;}
