update netowrk. add to sources

--- a/example_networks/write-up.tex
+++ b/example_networks/write-up.tex
@@ -5,93 +5,163 @@
 
 \begin{document}
 
-\title{Introduction to \LaTeX{}}
-\author{Author's Name}
+    \title{Notes}
+    \author{Author's Name}
 
-\maketitle
+    \maketitle
 
-\begin{abstract}
-The abstract text goes here.
-\end{abstract}
+    \begin{abstract}
+        The abstract text goes here.
+    \end{abstract}
 
-\section{Introduction}
+    \section{Introduction}
 
-	\begin{itemize}
-		\item Time course of pS6K in AA and AA + rapamycin conditions \cite{Patursky-Polischuk2014}
-		\item Rheb activates AMPK and reduces p27 in TSC2 null  cells which in turn reduces cdk2 \cite{lacher2010rheb}
-		\item Rheb is constitutively active in TSC2 knockout cells \cite{lacher2010rheb}
-		\item In TSC2 null cells, down regulating Rheb down regulated mTORC1 and s6k
-		\item TSC2 is a GAP for Rheb~\cite{Inoki2003}
-		\item The more TSC2 in the system the more Rheb that is hydrolysed \cite{Inoki2003}
-		\item Rheb-GTP is an activator of mTORC1, measured by an increase in S6K and 4EBP phos
-		\item The more RhebGTP present the more mTORC1 activation and S6K/4EBP phos \cite{Inoki2003}
-	\end{itemize}
+    \begin{itemize}
+        \item Time course of pS6K in AA and AA + rapamycin conditions \cite{patursky-polischuk2014}
+        \item Rheb activates AMPK and reduces p27 in TSC2 null cells which in turn reduces cdk2 \cite{lacher2010rheb}
+        \item Rheb is constitutively active in TSC2 knockout cells \cite{lacher2010rheb}
+        \item In TSC2 null cells, down regulating Rheb down regulated mTORC1 and s6k
+        \item TSC2 is a GAP for Rheb~\cite{inoki2003}
+        \item The more TSC2 in the system the more Rheb that is hydrolysed \cite{inoki2003}
+        \item Rheb-GTP is an activator of mTORC1, measured by an increase in S6K and 4EBP phos
+        \item The more RhebGTP present the more mTORC1 activation and S6K/4EBP phos \cite{inoki2003}
+    \end{itemize}
 
-	\subsection{\cite{Sarbassov2005phosphorylation}}
-	\begin{itemize}
-		\item mTORC1 phosphorylates Akt at S473
-	\end{itemize}
-
-
-	\subsection{\cite{Sarbassov2005phosphorylation}}
-	This is a review
-	\begin{itemize}
-		\item Amino acids inhibit TSC2
-	\end{itemize}
-
-	\subsection{\cite{hinalt2004amino}}
-	\begin{itemize}
-		\item Insulin and amino acids both stimulate mTORC1 individually and synergize together
-		\item Wortmannin inhibits these reactions
-	\end{itemize}
+    \subsection{\cite{Sarbassov2005phosphorylation}}
+    \begin{itemize}
+        \item mTORC1 phosphorylates Akt at S473
+    \end{itemize}
 
 
+    \subsection{\cite{Sarbassov2005phosphorylation}}
+    This is a review
+    \begin{itemize}
+        \item Amino acids inhibit TSC2
+    \end{itemize}
 
-%
-%	\subsection{x}
-%%\cite{nobukini2005amino}}
-%	\begin{itemize}
-%		\item Figure 1B
-%		\item S6K response to AA with mild phos but not to insulin. When combined, S6K has much larger phos response.
-%		\item Akt S473 is phos basally with no change with addition of AA. Insulin causes massive phos of Akt but both AA and insulin together produce a weaker signal.
-%		\item TSC2 is not phos by AA stim but is by insulin or both. Looks like AA provides no potentiation to the insulin signal.
-%		\item
-%	\end{itemize}
-%
-%
-%	\cite{Inoki2006}
-%
-%	\section{Papers left to read}
-%	\begin{itemize}
-%		\item Inoki2003 ampk phos tsc2
-%	\end{itemize}
-%
-%
-%\begin{itemize}
-%	\item insulin causes phos of s6k
-%	\item
-%\end{itemize}
-%
-%
+    \subsection{\cite{hinalt2004amino}}
+    \begin{itemize}
+        \item Insulin and amino acids both stimulate mTORC1 individually and synergize together
+        \item Wortmannin inhibits these reactions
+    \end{itemize}
 
-\subsection{\cite{demetriades2014regulation}}
-\begin{itemize}
-	\item RAG proteins bind TSC2.
-	\item Therefore, RAGs not only activate mTORC1 by inducing their recruitment to the lysosome under AA stimulation, they also actively actively repress mTORC1 in the absence of AA
-	\item binding between rag proteins and TSC2 increases upon AA removal
-	\item TSC2 is recruited to lysome in a Rag dependent manner when AAs are removed
-	\item \begin{itemize}
-			  \item TSC is cytoplasmic when AA present
-			  \item On removal TSC2 quickly accumulates on lysosomal surface (15 min)
-			  \item impaired Rag protein integrity blunts lysosomal accumulation of TSC2 upon AA removal and reduced mtorc activation on AA readdition
-	\end{itemize}
-	\item TSC2 is required for complete inactivation of mTORC1 when AAs are removed
-	\item \begin{itemize}
-			  \item cells lacking TSC2are unable to completly inactivate mtor on AA removal
-			  \item 
-			  \item
-	\end{itemize}
-\end{itemize}
+    \subsection{\cite{hardie2012ampk}}
+    AMPK and energy review
+    \begin{itemize}
+        \item During muscle contraction, glucose is used to generate ATP. AMPK enhances this process
+        \item Muscle glucose uptake is also promoted by insulin, when the fate of glucose is storage as glycogen
+        \item GLUT4 mediates the glucose update in both of these situations
+        \item GLUT4 are glucose transporters that reside in vesicles near the plasma membrane
+        \item GLUT4 containing vesicles need to fuse with the plasma membrane to allow them to transport glucose
+        \item This fusion requiers RAB G proteins in their GTP bound state, though RAB G proteins are basally exist in their GDP bound state
+        \item RAB G proteins are held in an inactive GDP bound state by RAB-GAP proteins, one of which is called Akt substrate 160 (AS160 / TBC1D4) and TBC1D1, both of which are associated with the GLUT4 containing vesicles
+        \item Akt phos AS160 in muscle and adipocytes allowing it to associate with 14-3-3 proteins which leads to disociation from the vesicles
+        \item AMPK also phosphorylates TBC1D1 in contracting muscle, also recruits 14-3-3 prroteins and leading to dissociation from vesicles
+        \item In both biological contexts, the Rab-GAP dissociation results in the loading of Rab with GTP and fusion of GLUT4 containing vesicles with the membrane
+        \item .
+    \end{itemize}
+
+    \subsection{\cite{hains2019greb1}}
+    \begin{itemize}
+        \item GREB1 gene response to E2 treatment via the estrogen receptor
+        \item GREB1 is required for hormone dependent proliferation
+        \item knock down of GREB1 results in growth arrent
+        \item overexpression of GREB1 results in oncogenic senescence
+        \item GREB1 regulates PI3K/Akt/mTORC1
+        \item Growth arrested BC cells from GREB1 knock down can be rescued by constitutive Akt activation
+    \end{itemize}
+
+    \subsection{\cite{miller2010hyperactivity}}
+    \begin{itemize}
+        \item A mechanism of resistance to endocrine therapies is overexpression of HER2
+        \item but only a small portion (around 10\%)
+    \end{itemize}
+
+    \subsection{\cite{miller2010hyperactivity}}
+    \begin{itemize}
+        \item These guys generated 4 long term estrogen deprevation BC cell lines (LTED)
+        \item Depriving these cells of estrogen is associated with hyperactivation of IGF/Insulin and EGF signalling
+        \item
+    \end{itemize}
+
+    \subsection{\cite{miller2011phosphatidylinositol}}
+    \begin{itemize}
+        \item
+    \end{itemize}
+
+    \subsection{\cite{campbell2001phosphatidylinositol}}
+    \begin{itemize}
+        \item
+    \end{itemize}
+
+    \subsection{\cite{liu2018targeting}}
+    \begin{itemize}
+        \item JakStat, Ras-PKC, NFkB and Kit signalling pathways regulate IDO1
+        \item Downstream of IDO1, GCN2 is activated, mTORC1 is inhibited by Tryp deprevation and the aryl hydrocarbon receptor pathway (AhR) is activated, since Kyn is ligand for the receptor
+        \item IDO1 is not expressed in most tissues under physiological conditions but constitutively expressed in many types of cancer
+        \item IDO1 is activated by diverse inflammatory signals: TNFa, TGFb, PAMPS, DAMPs, PGE2, via nfkb and jak stat pathways
+        \item constitutive IDO1 expression is mediated by cyclooxygenase and PGE2 via PKC and PI3K pathways \cite{hennequart2017constitutive}
+        \item IDO1 is under the regulation of of Bin1. Bin1 KO results in tumour growth and immune supression via upregulation of Stat1 and nfkb dependent \cite{muller2005inhibition}
+        \item Ras regulates IDO1 in cancer
+        \item
+        \item The depletion of Trp by IDO1 leads to accumulation of uncharged Trp-tRNA, which binds to and activates GCN2 a stress response kinase
+        \item GCN2 phos and inhibits eukaryotic initiation factor 2 alpha, attenuating transcription and translation
+        \item mTOR is also inhibited by Trp deprevation leading to activation of autophagy (via AMPK?)
+        \item Both GCN2 and mTOR effectors of IDO1 are immunesuppressive
+        \item AhR is a cytosolic ligand-activated TF. Its most potant ligand is TCDD which upregulates IDO1 expression \cite{vogel2008aryl}. Therefore it might be the case that Kyn binding to AhR also upregulates IDO1.
+        \item Since Kyn is also a ligand for AhR, we have a positive feedback \cite{opitz2011endogenous}
+        \item AhR is bHLH family
+        \item Kyn leads to the translocation of AhR into the nucleus after 1h \cite{opitz2011endogenous}
+        \item In the nucleus, the AhR forms a heterodimer with ARNT that interacts with dioxin response elements (DRE) \cite{opitz2011endogenous}
+        \item
+        \item
+        \item
+    \end{itemize}
+
+    %	\subsection{x}
+    %%\cite{nobukini2005amino}}
+    %	\begin{itemize}
+    %		\item Figure 1B
+    %		\item S6K response to AA with mild phos but not to insulin. When combined, S6K has much larger phos response.
+    %		\item Akt S473 is phos basally with no change with addition of AA. Insulin causes massive phos of Akt but both AA and insulin together produce a weaker signal.
+    %		\item TSC2 is not phos by AA stim but is by insulin or both. Looks like AA provides no potentiation to the insulin signal.
+    %		\item
+    %	\end{itemize}
+    %
+    %
+    %	\cite{Inoki2006}
+    %
+    %	\section{Papers left to read}
+    %	\begin{itemize}
+    %		\item Inoki2003 ampk phos tsc2
+    %	\end{itemize}
+    %
+    %
+    %\begin{itemize}
+    %	\item insulin causes phos of s6k
+    %	\item
+    %\end{itemize}
+    %
+    %
+
+    \subsection{\cite{demetriades2014regulation}}
+    \begin{itemize}
+        \item RAG proteins bind TSC2.
+        \item Therefore, RAGs not only activate mTORC1 by inducing their recruitment to the lysosome under AA stimulation, they also actively actively repress mTORC1 in the absence of AA
+        \item binding between rag proteins and TSC2 increases upon AA removal
+        \item TSC2 is recruited to lysome in a Rag dependent manner when AAs are removed
+        \item \begin{itemize}
+                  \item TSC is cytoplasmic when AA present
+                  \item On removal TSC2 quickly accumulates on lysosomal surface (15 min)
+                  \item impaired Rag protein integrity blunts lysosomal accumulation of TSC2 upon AA removal and reduced mtorc activation on AA readdition
+        \end{itemize}
+        \item TSC2 is required for complete inactivation of mTORC1 when AAs are removed
+        \item \begin{itemize}
+                  \item cells lacking TSC2are unable to completly inactivate mtor on AA removal
+                  \item
+                  \item
+        \end{itemize}
+    \end{itemize}
 
 
 
@@ -99,9 +169,8 @@ The abstract text goes here.
 
 
 
-\bibliographystyle{unsrt}
-\bibliography{sources}
-
+    \bibliographystyle{unsrt}
+    \bibliography{sources}
 
 
 \end{document}
