finished a first draft of model interface with Dash and plotly

--- a/example_networks/write-up.tex
+++ b/example_networks/write-up.tex
@@ -113,8 +113,58 @@
         \item AhR is bHLH family
         \item Kyn leads to the translocation of AhR into the nucleus after 1h \cite{opitz2011endogenous}
         \item In the nucleus, the AhR forms a heterodimer with ARNT that interacts with dioxin response elements (DRE) \cite{opitz2011endogenous}
+        \item Treg cells are the immunosuppressive entity that are recruited when IDO1 levels are high
         \item
         \item
+    \end{itemize}
+
+    \subsection{\cite{metz2012ido}}
+    \begin{itemize}
+        \item trp deprevation by IDO1 inhibits mTORC1, D-1MT releives this event
+        \item Trp deprevation leads to down regulation of PKC theta activity
+    \end{itemize}
+
+
+
+
+    \subsection{\cite{dong2000uncharged}}
+    \begin{itemize}
+        \item GCN2 regulates translation in AA starved cells by phosphoryltaing eIF2.
+        \item GCN2 is a general sensor of starvation
+        \item
+    \end{itemize}
+
+    \subsection{\cite{hao2005uncharged}}
+    \begin{itemize}
+        \item
+    \end{itemize}
+
+    \subsection{\cite{xia2018gcn2}}
+    \begin{itemize}
+        \item GCN2 is one of 4 known sensors of the integrated stress response (IRS)
+        \item It can be activated by the deprevation of a single amino acid
+        \item Under context of low AA levels, uncharged tRNA molecules accumulate and bind to GNC2 causing its activation
+        \item When activated, GCN2 phosphorylates and inactivates eIF2alpha on Ser51, and reduces translation
+    \end{itemize}
+
+    \subsection{\cite{folgiero2016ido1}}
+    \begin{itemize}
+        \item Rapamycin enhances INFg mediated IDO1 expression
+        \item
+    \end{itemize}
+
+    \subsection{\cite{}}
+    \begin{itemize}
+        \item
+    \end{itemize}
+
+    \subsection{\cite{}}
+    \begin{itemize}
+        \item
+    \end{itemize}
+
+    \subsection{\cite{}}
+    \begin{itemize}
         \item
     \end{itemize}
 
