topology changes. Model still needs validation

--- a/example_networks/write-up.tex
+++ b/example_networks/write-up.tex
@@ -168,6 +168,12 @@
         \item
     \end{itemize}
 
+    \section{Model notes}
+    \begin{itemize}
+        \item Looks like this topology causes pAkt to have a hyperbolic curve, instead of following the transient curve induced by pPI3K. Is this correct?
+        \item
+    \end{itemize}
+
     %	\subsection{x}
     %%\cite{nobukini2005amino}}
     %	\begin{itemize}
