--- a/example_networks/sources.bib
+++ b/example_networks/sources.bib
@@ -386,6 +386,146 @@
   publisher = {ASBMB},
 }
 
+@Article{anderson2008integrative,
+  author    = {Anderson, Alexander RA and Quaranta, Vito},
+  title     = {Integrative mathematical oncology},
+  journal   = {Nature Reviews Cancer},
+  year      = {2008},
+  volume    = {8},
+  number    = {3},
+  pages     = {227},
+  file      = {:paper16.pdf:PDF},
+  publisher = {Nature Publishing Group},
+}
+
+@Article{liu2018targeting,
+  author    = {Liu, Ming and Wang, Xu and Wang, Lei and Ma, Xiaodong and Gong, Zhaojian and Zhang, Shanshan and Li, Yong},
+  title     = {Targeting the IDO1 pathway in cancer: from bench to bedside},
+  journal   = {Journal of hematology \& oncology},
+  year      = {2018},
+  volume    = {11},
+  number    = {1},
+  pages     = {100},
+  file      = {:paper17.pdf:PDF},
+  publisher = {BioMed Central},
+}
+
+@Article{hennequart2017constitutive,
+  author    = {Hennequart, Marc and Pilotte, Luc and Cane, Stefania and Hoffmann, Delia and Stroobant, Vincent and De Plaen, Etienne and Van den Eynde, Beno{\^\i}t J},
+  title     = {Constitutive IDO1 expression in human tumors is driven by cyclooxygenase-2 and mediates intrinsic immune resistance},
+  journal   = {Cancer immunology research},
+  year      = {2017},
+  volume    = {5},
+  number    = {8},
+  pages     = {695--709},
+  file      = {:paper18.pdf:PDF},
+  publisher = {AACR},
+}
+
+@Article{muller2005inhibition,
+  author    = {Muller, Alexander J and DuHadaway, James B and Donover, P Scott and Sutanto-Ward, Erika and Prendergast, George C},
+  title     = {Inhibition of indoleamine 2, 3-dioxygenase, an immunoregulatory target of the cancer suppression gene Bin1, potentiates cancer chemotherapy},
+  journal   = {Nature medicine},
+  year      = {2005},
+  volume    = {11},
+  number    = {3},
+  pages     = {312},
+  file      = {:paper19.pdf:PDF},
+  publisher = {Nature Publishing Group},
+}
+
+@Article{opitz2011endogenous,
+  author    = {Opitz, Christiane A and Litzenburger, Ulrike M and Sahm, Felix and Ott, Martina and Tritschler, Isabel and Trump, Saskia and Schumacher, Theresa and Jestaedt, Leonie and Schrenk, Dieter and Weller, Michael and others},
+  title     = {An endogenous tumour-promoting ligand of the human aryl hydrocarbon receptor},
+  journal   = {Nature},
+  year      = {2011},
+  volume    = {478},
+  number    = {7368},
+  pages     = {197},
+  file      = {:paper20.pdf:PDF},
+  publisher = {Nature Publishing Group},
+}
+
+@Article{vogel2008aryl,
+  author    = {Vogel, Christoph FA and Goth, Samuel R and Dong, Bin and Pessah, Isaac N and Matsumura, Fumio},
+  title     = {Aryl hydrocarbon receptor signaling mediates expression of indoleamine 2, 3-dioxygenase},
+  journal   = {Biochemical and biophysical research communications},
+  year      = {2008},
+  volume    = {375},
+  number    = {3},
+  pages     = {331--335},
+  file      = {:paper21.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{metz2012ido,
+  author    = {Metz, Richard and Rust, Sonja and DuHadaway, James B and Mautino, Mario R and Munn, David H and Vahanian, Nicholas N and Link, Charles J and Prendergast, George C},
+  title     = {IDO inhibits a tryptophan sufficiency signal that stimulates mTOR: a novel IDO effector pathway targeted by D-1-methyl-tryptophan},
+  journal   = {Oncoimmunology},
+  year      = {2012},
+  volume    = {1},
+  number    = {9},
+  pages     = {1460--1468},
+  file      = {:paper22.pdf:PDF},
+  publisher = {Taylor \& Francis},
+}
+
+@Article{munn2005gcn2,
+  author    = {Munn, David H and Sharma, Madhav D and Baban, Babak and Harding, Heather P and Zhang, Yuhong and Ron, David and Mellor, Andrew L},
+  title     = {GCN2 kinase in T cells mediates proliferative arrest and anergy induction in response to indoleamine 2, 3-dioxygenase},
+  journal   = {Immunity},
+  year      = {2005},
+  volume    = {22},
+  number    = {5},
+  pages     = {633--642},
+  file      = {:paper23.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{dong2000uncharged,
+  author    = {Dong, Jinsheng and Qiu, Hongfang and Garcia-Barrio, Minerva and Anderson, James and Hinnebusch, Alan G},
+  title     = {Uncharged tRNA activates GCN2 by displacing the protein kinase moiety from a bipartite tRNA-binding domain},
+  journal   = {Molecular cell},
+  year      = {2000},
+  volume    = {6},
+  number    = {2},
+  pages     = {269--279},
+  file      = {:paper25.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{hao2005uncharged,
+  author    = {Hao, Shuzhen and Sharp, James W and Ross-Inta, Catherine M and McDaniel, Brent J and Anthony, Tracy G and Wek, Ronald C and Cavener, Douglas R and McGrath, Barbara C and Rudell, John B and Koehnle, Thomas J and others},
+  title     = {Uncharged tRNA and sensing of amino acid deficiency in mammalian piriform cortex},
+  journal   = {Science},
+  year      = {2005},
+  volume    = {307},
+  number    = {5716},
+  pages     = {1776--1778},
+  file      = {:paper24.pdf:PDF},
+  publisher = {American Association for the Advancement of Science},
+}
+
+@Misc{xia2018gcn2,
+  author    = {Xia, Xiaojing and Lei, Liancheng and Qin, Wanhai and Wang, Lei and Zhang, Gaiping and Hu, Jianhe},
+  title     = {GCN2 controls the cellular checkpoint: potential target for regulating inflammation},
+  year      = {2018},
+  file      = {:paper26.pdf:PDF},
+  publisher = {Nature Publishing Group},
+}
+
+@Article{folgiero2016ido1,
+  author    = {Folgiero, Valentina and Miele, Evelina and Carai, Andrea and Ferretti, Elisabetta and Alfano, Vincenzo and Po, Agnese and Bertaina, Valentina and Goffredo, Bianca Maria and Benedetti, Maria Chiara and Camassei, Francesca Diomedi and others},
+  title     = {IDO1 involvement in mTOR pathway: a molecular mechanism of resistance to mTOR targeting in medulloblastoma},
+  journal   = {Oncotarget},
+  year      = {2016},
+  volume    = {7},
+  number    = {33},
+  pages     = {52900},
+  file      = {:paper27.pdf:PDF},
+  publisher = {Impact Journals, LLC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: fileDirectory:sources;}
